--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests~=2.27.1
-bs4~=0.0.1
+requests>=2.27.1
+bs4
 click>=8.0.1
-urwid~=2.1.2
-Pillow==9.2.0
-beautifulsoup4~=4.11.0
+urwid>=2.1.2
+Pillow==9.3.0
+beautifulsoup4>=4.11.0
 colorama
